syntax = "proto3"; 
package server; 
option go_package = "github.com/DANCHIK121/YANDEX-Finally-Project-Part-2/Server/proto";

message TaskRequest {
    float  ID = 1;
    float  Arg1 = 2;
    float  Arg2 = 3;
    string Operation = 4; 
}

message SendTaskMessage {
    float  ID = 1;  
    float  Arg1 = 2;
    float  Arg2 = 3;
    string Operation = 4; 
}

message UpdateTaskStringMessage {
    float  ID = 1;
    float  Result = 2;
    string Status = 3;
}

service TaskService {
    rpc SendTask (TaskRequest, string JWTToken) returns (SendTaskMessage); 
    rpc UpdateTaskString (TaskRequest) returns (UpdateTaskStringMessage);
}